@@ -708,6 +708,12 @@ include => demo
 ;exten => 6600,hint,park:701@parkedcalls
 ;exten => 6600,1,noop
 ;
+
+;To subscribe to the availability of a free member in the 'markq' queue.
+;Note: '_avail' is added to the QueueName
+;exten => 8501,hint,Queue:markq_avail
+;exten => 8501,1,Queue(markq)
+
 ; Some other handy things are an extension for checking voicemail via
 ; voicemailmain
 ;
